css/digisigSkin.css
/* ... */
.email{
    cursor:default !important; 
    margin-right:70px;
    color: #00485E !important;
}
.seal{
    border-bottom: 1px solid rgb(0, 119, 153);
}
.sealMetadata{
    border-bottom: none !important;
    padding-top: 5px;
}
a:hover{
	cursor: pointer
}
.sealEntry{
    background-color: rgba(0, 119, 153, 0.3);
}
/* Table CSS */
thead{
    background-color: #00485E;
    color: white;
    font-weight: bold;
}
th{
    text-align: center;
/*    border-left: 1px solid black;
    border-right: 1px solid black;
    border-top: 1px solid black;*/
    /*border: 1px solid black;*/
    padding: 5px !important;
    max-width: 720px;
    padding: 4px 8px !important;
}
.metaTable.maxmin td{
    border:1px solid rgba(0,119,153, .3);
    max-width: 720px;
    padding: 8px !important;
}

.metaTable.maxmin th{
    text-align: center;
    border: 1px solid black;
    padding: 5px !important;
    max-width: 720px;
    padding: 4px 8px !important;
}
.metaTable.indent2 tr{
    padding: 2px 0px;
}
td{
    /*border:1px solid rgba(0,119,153, .3);*/
    max-width: 720px;
    padding: 0px 8px !important;
}
tbody tr:nth-child(odd){
    background-color: rgba(0,119,153, .3);
}
tbody tr:nth-child(even) {
    background-color: rgba(0,119,153, .2);
}

.tableWrap{
    /*border-top: 1px solid #079;*/
    /*border-bottom: 1px solid #079;*/
    padding : 12px 0px;
    margin: 40px 0px;
}

table{
    border-collapse: collapse !important;
    
}

table.maxmin th, table.maxmin td{
    max-width: 720px;
}
.sealThumbnail{
    display: inline-block;
    height:80px;
    width: 73px;
    position: relative;
    background-image: url("/DigiSig/images/default/not_available_thumb.jpg");
}
.viewImgBtn{
    position: relative;
    border: none;
    background: none;
    color: white;
    background-color: #00485E;
}
.digiBtn{
    border: none;
    background: none;
    color: white;
    background-color: #00485E;
    position: relative;
    display: inline-block;
    margin-left: 8px;
    padding: 4px;
}
.metaTable{
    display: block;
}

#digisigID{
    margin-right:15px;
    color:black;
}
#permalink, #shape, #height, #width, #title{
    color: black;
}
#height, #shape{
    margin-right: 15px;
}

.sealExample{
    display: inline-block;
}
select{
    background: #00485E no-repeat 90% center;
    font-size: 16px;
    line-height: 1;
    border: 1px solid white;
    border-radius: 0;
    color: white !important;
/*    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;*/
    text-indent: 1px;
    text-overflow: '';
}

.pageShade{
    background-color: rgba(0,0,0,.3);
    height: 100%;
    width: 100%;
    position: absolute;
    top: 0;
    left : 0;
    text-align: center;
}

.fullImgWrap{
    position: relative;
    height: 98%;
    max-width: 85%;
    top: 1%;
    width: auto;
    background-color: #00485E;
    margin: 0 auto;
    overflow-y: scroll;
    z-index: 4;
}

.fullImgWrap img{
    position: relative;
    height: auto;
    max-width: 95%;
    top: 2%;
    top: 100px;
}
.closeBtn{
    border: 1px solid white;
    padding: 4px;
    color: white;
    position: absolute;
    right: 4px;
    top: 4px;
    cursor: pointer;
}

option[value="holder"]{
    color: white !important;
    font-weight: bold !important;
    margin: 5px 0px !important;
}

option[value="split"]{
    color: #33ADFF !important;
    margin: 5px 0px !important;
    font-size: 15px;
    font-weight: bold;
}

option{
    margin-left: 8px;
}

.addedCardArea{
    position: fixed;
    /*overflow-y: auto;*/
    display: none;
    padding: 25px;
    top: 5%;
    height: 505px;
    left: 0px;
    margin: 0% 5%;
    width: 90%;
    z-index: 5;
    background-color: #00485E;
    color: white;
    box-shadow: 0px 0px 19px 4px black;
}

.indent .card{
    padding: 0px 14px 7px 7px;
    margin: 0px 7px 6px 0px;
    width: auto;
    height: 200px;
    border-right: 1px solid #00485E;
}

.indent .card .cardInfoVal{
    width: 300px;
}

.card{
    /*border: 2px solid #079;*/
    padding: 7px 0px 7px 15px;
    margin: 6px 7px 6px 0px;
    width: 400px;
    overflow-y: auto;
    display: inline-table;
    background-color: #FFF;
    height: 83%;
    white-space: nowrap;
    position: relative;
    font-style: normal;
    font-size: 14px;
}
.theCards{
    overflow-x: auto;
    display: block;
    white-space: nowrap;
    height: 93%;
}
.theCards_body{
    display: block;
    overflow: auto;
    /*border-bottom: 1px solid #079; */
    padding: 12px 0px;
    margin: 5px 0px;
    height: auto;
}
.theCards_body .card{

}

.sealMetadata + .theCards_body {
    margin-top: 5px !important;
}

.sealMetadata + .tableWrap {
    margin-top: 55px !important;
}

.addedCardHeader{
    font-weight: bold;
    font-size: 19px;
    display: block;
    position: relative;
    border-bottom: 2px solid white;
}

.card_single{
    /*border: 2px solid #079;*/
    /*padding: 15px;
    margin: 6px 0px;
    width: 80%;
    display: inline-table;
    height: auto;
    margin-right: 7px;
    background-color: white;*/

    padding: 0px 0px 0px 0px;
    margin: 6px 0px;
    width: 80%;
    display: inline-table;
    height: auto;
    margin-right: 7px;
    background-color: white;
    
}
.card_single .cardInfoVal{
    width: 70% !important;
}

.card_single .cardInfoKey{
    font-style: italic;    
}

.cardInfoVal{
    color: #000;
    white-space: normal;
    display: inline-table;
    position: relative;
    text-overflow: ellipsis;
    overflow: hidden;
    width: 250px;
}
.cardInfoKey{
    color: #00485E;
    /*font-weight: bold;*/
    margin-right: 5px;
    display: inline-table;
    text-align: right;
    position: relative;
    text-overflow: ellipsis;
    overflow: hidden;
    width: 88px;
    white-space: normal;

}
.cardInfo{
    margin: 2px 0px;
}
.indent, .indent3{
    padding-left: 15px;
    
}
.indent3 .card{
    width: auto;
    height: auto;
}
.indent2{
    padding-left: 45px;
}

.data_wrapper.white{
    background-color:white;
}
/* ... */

